# raft-practice

./: .gitignore  CMakeLists.txt  README.md
proto/: message.proto
src/: client.cpp  common.h  node_client.cpp  node_client.h  node_server_service_impl.cpp  node_server_service_impl.h  raft_log.cpp  raft_log.h  raft_node.cpp  raft_node.h  raft_state_machine.cpp  raft_state_machine.h  raft_state_machine_candidate.cpp  raft_state_machine_leader.cpp  raft_state_machine_tick.cpp  raft_test.cpp  server.cpp  service_keeper.cpp  service_keeper.h
src/proto/: message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
src/util/: array_lock_free_queue.h  string_util.cpp  string_util.h
